--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </ul>
             </div>
             <div class="hero-content d-flex ms-auto">
-                <p class="d-flex flex-column fs-3 text-center">Hello! I am <span class="display-2" id="brand">Ibrahim</span>I am a web developer</p>
+                <p class="d-flex flex-column fs-3 text-center">Hello! I am <span class="display-2" id="brand">Ibrah</span>I am a web developer</p>
             </div>
             <div class="radios d-flex flex-column ms-auto p-3"> 
 
