--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,24 +13,26 @@
     <script defer src="bootstrap/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main class="position-relative hero p-2">
         <header class="container ">
             <nav class="navbar navbar-expand-lg">
-                <a class=" ms-auto navbar-toggler border-0 p-0 me-2"  data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false">
+                <a class=" ms-auto navbar-toggler border-0 p-0 me-2" data-bs-toggle="collapse" data-bs-target="#menu"
+                    aria-expanded="false">
                     <span class="border-0  p-0" id="humburger">
-                       <div class="h-icon border-0"></div>
-                       <div class="h-icon border-0"></div>
-                       <div class="h-icon border-0"></div>
+                        <div class="h-icon border-0"></div>
+                        <div class="h-icon border-0"></div>
+                        <div class="h-icon border-0"></div>
                     </span>
                 </a>
                 <div class="collapse navbar-collapse rounded p-2" id="menu">
                     <ul class="navbar-nav m-auto px-3" id="list">
                         <a href="#" class="nav-link text-white mx-3  p-0 fs-5" id="navLinks">Home</a>
-                        <a href="#about"class="nav-link text-white mx-3  p-0 fs-5"id="navLinks">About</a>
-                        <a href="#services" class="nav-link text-white mx-3  p-0 fs-5"id="navLinks">Services</a>
-                        <a href="#portfolio" class="nav-link text-white mx-3  p-0 fs-5"id="navLinks">Projects</a>
-                        <a href="#contact" class="nav-link text-white mx-3  p-0 fs-5"id="navLinks">Contact</a>
+                        <a href="#about" class="nav-link text-white mx-3  p-0 fs-5" id="navLinks">About</a>
+                        <a href="#services" class="nav-link text-white mx-3  p-0 fs-5" id="navLinks">Services</a>
+                        <a href="#portfolio" class="nav-link text-white mx-3  p-0 fs-5" id="navLinks">Projects</a>
+                        <a href="#contact" class="nav-link text-white mx-3  p-0 fs-5" id="navLinks">Contact</a>
                     </ul>
                 </div>
             </nav>
@@ -37,19 +40,21 @@
         <section class="container d-flex align-items-center w-100  py-4 my-2" id="hero">
             <div class="socials me-3 mt-4">
                 <ul class="px-0 p-2">
-                    <a href="" class="nav-link my-3 mt-0"><i class="fa-brands fa-github fs-2"id="linked-in"></i></a>
-                    <a href="" class="nav-link my-3"><i class="fa-brands fa-twitter fs-2"id="linked-in"></i></a>
-                    <a href="" class="nav-link my-3 "><i class="fa-brands fa-linkedin fs-2"id="linked-in"></i></a>
+                    <a href="" class="nav-link my-3 mt-0"><i class="fa-brands fa-github fs-2" id="linked-in"></i></a>
+                    <a href="" class="nav-link my-3"><i class="fa-brands fa-twitter fs-2" id="linked-in"></i></a>
+                    <a href="" class="nav-link my-3 "><i class="fa-brands fa-linkedin fs-2" id="linked-in"></i></a>
                 </ul>
             </div>
-            <div class="hero-content d-flex ms-auto">
-                <p class="d-flex flex-column fs-3 text-center">Hello! I am <span class="display-2" id="brand">Ibrahim</span>I am a web developer</p>
+            <div class="hero-content d-flex flex-column ms-auto">
+                <p class="d-flex flex-column fs-3 text-center">Hello! I am <span class="display-2"
+                        id="brand">Ibrahim</span>I am a web developer</p>
+                <p>this page is currently under development :)</p>
             </div>
-            <div class="radios d-flex flex-column ms-auto p-3"> 
+            <div class="radios d-flex flex-column ms-auto p-3">
             </div>
         </section>
     </main>
-  
+
 </body>
 
 </html>
