--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="container d-flex align-items-center w-100  py-4 my-2" id="hero">
             <div class="socials me-3 mt-4">
                 <ul class="px-0 p-2">
-                    <a href="https://github.com/Ibrahobinchu/ibrahim" class="nav-link my-3 mt-0"><i class="fa-brands fa-github fs-2" id="linked-in"></i></a>
+                    <a href="https://github.com/Ibrahobinchu" class="nav-link my-3 mt-0"><i class="fa-brands fa-github fs-2" id="linked-in"></i></a>
                     <a href="" class="nav-link my-3"><i class="fa-brands fa-twitter fs-2" id="linked-in"></i></a>
                     <a href="" class="nav-link my-3 "><i class="fa-brands fa-linkedin fs-2" id="linked-in"></i></a>
                 </ul>
