--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="hero-content d-flex flex-column ms-auto">
                 <p class="d-flex flex-column fs-3 text-center">Hello! I am <span class="display-2"
                         id="brand">Ibrahim</span>I am a web developer</p>
-                <p>this page is currently under development :)</p>
+                <p>this page is currently under development &#127773; &#128522;&#128077;</p>
             </div>
             <div class="radios d-flex flex-column ms-auto p-3">
             </div>
